Fix: Session List Layout - Misaligned 'Session information' link using pop-up layout on Block designers #303

--- a/themes/block.designers/css/style.css
+++ b/themes/block.designers/css/style.css
@@ -968,7 +968,8 @@ body.arlo {
     bottom: 20px;
 }
 
-.arlo#arlo .arlo-tooltip-button {
+.arlo#arlo .arlo-tooltip-button,
+.arlo#arlo .arlo-popup-button {
     display: inline-block;
 }
 
